# SATySFi-fonts-noto-sans-mono

./: Makefile  README.md  Satyristes  doc-fonts-noto-sans-mono.saty  fonts.satysfi-hash  satysfi-fonts-noto-sans-mono-doc.opam  satysfi-fonts-noto-sans-mono.opam
